text align #fix

--- a/src/css/services.css
+++ b/src/css/services.css
@@ -12,8 +12,8 @@
     margin: 10px 27px 25px 27px;
     padding: 30px 20px 30px 20px;
     box-shadow: inset 0 0 0px gold, 0 0 9px #8080808c;
-    text-align: center;
     border-radius: 4px;
+    background: #f7f7f74f;
 }
 
 .cards:hover {
